--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "yarn run webpack --config=config/webpack.dev.js",
     "dev-server": "yarn run webpack-dev-server --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
+    "prod": "NODE_ENV=production node src/server/main.js",
     "babel": "babel src/main.js"
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "dotenv": "^6.0.0",
     "emotion": "^9.2.6",
     "express": "^4.16.3",
     "extract-loader": "^2.0.1",
@@ -37,6 +39,10 @@
     "react-hot-loader": "^4.3.4",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "vue": "^2.5.17",
+    "vue-loader": "^15.2.6",
+    "vue-style-loader": "^4.1.1",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
