--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "yarn run webpack --config=config/webpack.dev.js",
-    "build:prod": "NODE_ENV=production yarn run webpack --config=config/webpack.prod.js --env.NODE_ENV=production",
+    "build:prod": "rm -r dist && yarn run webpack --config=config/webpack.prod.js --env.NODE_ENV=production",
     "dev-server": "yarn run webpack-dev-server --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
     "prod": "NODE_ENV=production node src/server/main.js",
-    "babel": "babel src/main.js"
+    "babel": "babel src/main.js",
+    "babel-minify": "yarn run minify src/main.js -d dist/"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-minify": "^0.4.3",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-emotion": "^9.2.6",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
@@ -42,6 +45,7 @@
     "react-hot-loader": "^4.3.4",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "vue": "^2.5.17",
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
