--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "yarn run webpack --config=config/webpack.dev.js",
-    "build:prod": "rm -r dist && yarn run webpack --config=config/webpack.prod.js --env.NODE_ENV=production",
+    "build:prod": "yarn run webpack --config=config/webpack.prod.js --env.NODE_ENV=production",
     "dev-server": "yarn run webpack-dev-server --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
     "prod": "NODE_ENV=production node src/server/main.js",
@@ -28,10 +28,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "brotli-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "emotion": "^9.2.6",
     "express": "^4.16.3",
+    "express-static-gzip": "^1.1.1",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
