--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "build:dev": "yarn run webpack --config=config/webpack.dev.js",
     "build:prod": "yarn run webpack --config=config/webpack.prod.js --env.NODE_ENV=production",
+    "build:server": "yarn run webpack --watch --config=config/webpack.server.js --env.NODE_ENV=production",
     "dev-server": "yarn run webpack-dev-server --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
+    "dev:server": "nodemon --inspect --watch build --watch config build/server-bundle.js",
     "prod": "NODE_ENV=production node src/server/main.js",
+    "prod:server": "NODE_ENV=production node build/server-bundle.js",
     "babel": "babel src/main.js",
     "babel-minify": "yarn run minify src/main.js -d dist/"
   },
@@ -59,7 +62,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
