--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-emotion": "^9.2.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -42,6 +43,8 @@
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.6",
     "react-hot-loader": "^4.3.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
