--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-universal-import": "^3.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -31,6 +32,7 @@
     "emotion": "^9.2.6",
     "express": "^4.16.3",
     "express-static-gzip": "^1.1.1",
+    "extract-css-chunks-webpack-plugin": "^3.0.11",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
@@ -45,6 +47,7 @@
     "react-hot-loader": "^4.3.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-universal-component": "^3.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
@@ -52,11 +55,12 @@
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.16.3",
+    "webpack": "4.16.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
+    "webpack-flush-chunks": "^2.0.1",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-hot-server-middleware": "^0.5.0",
     "webpack-node-externals": "^1.7.2"
