--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-hot-loader": "^4.3.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-universal-component": "^3.0.0",
+    "react-universal-component": "2.9.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
@@ -55,7 +55,7 @@
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "4.16.0",
+    "webpack": "4.14.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
