--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-emotion": "^9.2.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-universal-import": "^3.0.0",
     "babel-polyfill": "^6.26.0",
@@ -27,6 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "brotli-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^1.1.11",
+    "cross-fetch": "^2.2.2",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "emotion": "^9.2.6",
@@ -45,9 +47,12 @@
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.6",
     "react-hot-loader": "^4.3.4",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-universal-component": "2.9.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
